<resources>
    <string name="app_name">Band me</string>
    <string name="app_logo">App logo</string>
    <string name="SignIn_EditText_email">Email</string>
    <string name="SignIn_EditText_Password">Password</string>
    <string name="SignIn_BTN_Login">Login</string>
    <string name="SignIn_LBL_forgot_password">Forgot password</string>
    <string name="SignIn_LBL_first_time_register_now">First time? Register Now</string>
    <string name="Register_ET_email">Email</string>
    <string name="Register_ET_password">Password</string>
    <string name="Register_ET_validate_password">Validate password </string>
    <string name="Register_LBL_instruments">Instruments</string>
    <string name="Register_ET_age">Age</string>
    <string name="Register_BTN_createAnAccount">Create an account</string>
    <string name="Register_IBTN_electric_guitar">electric_guitar</string>
    <string name="Register_IBTN_bass_guitar">bass guitar</string>
    <string name="Register_IBTN_drums">drums</string>
    <string name="Register_IBTN_keyboard">keyboard</string>
    <string name="Register_IBTN_microphone">microphone</string>
    <string name="Register_IBTN_flute">flute</string>
    <string name="Register_IBTN_dj">dj</string>
    <string name="Register_IBTN_mandolin">mandolin</string>
    <string name="Register_IBTN_violin">violin</string>
    <string name="Register_IBTN_percussion">percussion</string>
    <string name="Register_ET_info">Tell us about yourself</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Register_LBL_back">Back</string>
    <string name="Register_LBL_next">Next</string>
    <string name="app_background">App background</string>
    <string name="right_arrow">Right arrow</string>
    <string name="left_arrow">Left arrow</string>
    <string name="Instruments_LBL_i_play_on">I play</string>
    <string name="PersonalData_TF_firstName">First name</string>
    <string name="PersonalData_TF_lastName">Last name</string>
    <string name="LoginInfo_TF_info">Write a little bit about yourself</string>
    <string name="PersonalData_BTN_Login">Create an account</string>
    <string name="LoginInfo_an_email_will_be_send_for_verification">An email will be send for verification</string>
    <string name="register_img_advancement">register_IMG_advancement</string>
    <string name="SignIn_ET_password">password</string>
    <string name="SignIn_ET_errorText">Invalid user name or password</string>
    <string name="SignIn_ET_email">email</string>
    <string name="signIn_background">signIn background</string>
    <string name="UserProfile_profilePicture">User Profile</string>
    <string name="UserProfile_chat_symbol">chat symbol</string>
    <string name="UserProfile_menu_symbol">menu symbol</string>
    <string name="UserProfile_LBL_firstName">First name: </string>
    <string name="UserProfile_LBL_lastName">Last name:</string>
    <string name="UserProfile_LBL_instruments">Instruments:</string>
    <string name="UserProfile_LBL_age">Age:</string>
    <string name="UserProfile_LBL_info">info:</string>
    <string name="UserProfile_LBL_district">District</string>
    <string name="Instruments_TF_other">Other</string>
    <string name="UserProfile_Toolbar_SignOut">Sign out</string>
    <string name="Chat_BTN_send">Send button</string>
    <string name="Chat_profileImage">Profile image</string>
    <string name="return_btn">return btn</string>
    <string name="Activity_Update_BTN_update">Update</string>
    <string name="UserProfile_Toolbar_Update_profile">Update profile</string>

    <string-array name="temp">
        <item> aaa</item>
        <item> bbb</item>
        <item> ccc</item>
        <item> ddd</item>
        <item> eee</item>
        <item> fff</item>

    </string-array>
</resources>