<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activities.Activity_Register"
    android:orientation="vertical"
    android:background="@color/backGround"
    android:windowSoftInputMode="adjustResize"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        >

        <EditText
            android:id="@+id/Register_ET_userName"
            android:layout_weight="1"
            android:maxLength="20"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:autofillHints="@string/Register_ET_email"
            android:hint="@string/Register_ET_email"
            android:inputType="textVisiblePassword"
            android:layout_marginEnd="3dp"/>

        <EditText
            android:id="@+id/Register_ET_email"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:maxLength="30"
            android:layout_height="match_parent"
            android:autofillHints="@string/Register_ET_email"
            android:hint="@string/Register_ET_email"
            android:inputType="textEmailAddress"
            android:layout_marginStart="3dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"

        >

        <EditText
            android:id="@+id/Register_ET_password"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:maxLength="20"
            android:layout_height="match_parent"
            android:autofillHints="@string/Register_ET_password"
            android:hint="@string/Register_ET_password"
            android:inputType="textPassword"
            android:layout_marginEnd="3dp"/>

        <EditText
            android:id="@+id/Register_ET_validatePassword"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:maxLength="20"
            android:layout_height="match_parent"
            android:autofillHints="Email"
            android:hint="@string/Register_ET_validate_password"
            android:inputType="textPassword"
            android:layout_marginStart="3dp"
            tools:ignore="TextFields" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"

        >

        <Spinner
            android:id="@+id/Register_Spinner_District"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:entries="@array/Register_Spinner_IsraelDistricts"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"/>

        <EditText
            android:id="@+id/Register_ET_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="Age"
            android:hint="@string/Register_ET_age"
            android:maxLength="3"
            android:inputType="number"
            android:layout_weight="1"
            android:layout_marginStart="5dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/Register_LBL_instruments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/Register_LBL_instruments"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"

        >

        <ImageButton
            android:id="@+id/Register_IBTN_electric_guitar"
            android:tag="Register_IBTN_electric_guitar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/electric_guitar"
            android:backgroundTint="@color/backGround"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:contentDescription="@string/Register_IBTN_electric_guitar" />

        <ImageButton
            android:id="@+id/Register_IBTN_bass_guitar"
            android:tag="Register_IBTN_bass_guitar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/bass_guitar"
            android:backgroundTint="@color/backGround"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:contentDescription="@string/Register_IBTN_bass_guitar" />

        <ImageButton
            android:id="@+id/Register_IBTN_drums"
            android:tag="Register_IBTN_drums"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/drums"
            android:backgroundTint="@color/backGround"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:contentDescription="@string/Register_IBTN_drums" />

        <ImageButton
            android:id="@+id/Register_IBTN_keyboard"
            android:tag="Register_IBTN_keyboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/keyboard"
            android:backgroundTint="@color/backGround"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:contentDescription="@string/Register_IBTN_keyboard" />

        <ImageButton
            android:id="@+id/Register_IBTN_microphone"
            android:tag="Register_IBTN_microphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/microphone"
            android:backgroundTint="@color/backGround"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:contentDescription="@string/Register_IBTN_microphone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        >

        <ImageButton
            android:id="@+id/Register_IBTN_flute"
            android:tag="Register_IBTN_flute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/flute"
            android:backgroundTint="@color/backGround"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:contentDescription="@string/Register_IBTN_flute" />

        <ImageButton
            android:id="@+id/Register_IBTN_dj"
            android:tag="Register_IBTN_dj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/dj"
            android:backgroundTint="@color/backGround"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:contentDescription="@string/Register_IBTN_dj" />

        <ImageButton
            android:id="@+id/Register_IBTN_mandolin"
            android:tag="Register_IBTN_mandolin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mandolin"
            android:backgroundTint="@color/backGround"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:contentDescription="@string/Register_IBTN_mandolin" />

        <ImageButton
            android:id="@+id/Register_IBTN_violin"
            android:tag="Register_IBTN_violin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/violin"
            android:backgroundTint="@color/backGround"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:contentDescription="@string/Register_IBTN_violin" />

        <ImageButton
            android:id="@+id/Register_IBTN_percussion"
            android:tag="Register_IBTN_percussion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/percussion"
            android:backgroundTint="@color/backGround"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:contentDescription="@string/Register_IBTN_percussion" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/Register_ET_info"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="textMultiLine"
            android:lines="5"
            android:maxLength="400"
            android:maxLines="10"
            android:layout_marginTop="50dp"
            android:hint="@string/Register_ET_info"
            android:gravity="top"
            android:backgroundTint="@color/Register_info_background"
            android:background="@color/Register_info_background"
            android:scrollbars="horizontal"
            android:autofillHints="" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Register_BTN_createAnAccount"
            android:tag="Register_BTN_createAnAccount"
            style="@style/TextAppearance.AppCompat.Large.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Register_BTN_createAnAccount"
            android:textAllCaps="false"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            app:cornerRadius="10dp" />

    </RelativeLayout>

</LinearLayout>