<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activities.Activity_SignIn"
    android:background="@color/backGround">

    <ImageView
        android:id="@+id/signIn_IMAGE_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:contentDescription="@string/signIn_background" />
    <ImageView
        android:id="@+id/signIn_IMAGE_Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_logo"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/SignIn_ET_email"
        android:layout_marginBottom="50dp"
        android:src="@drawable/app_icon" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/SignIn_ET_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        app:startIconContentDescription="@string/SignIn_ET_email"
        app:errorEnabled="true"
        app:startIconDrawable="@drawable/email"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/SignIn_ET_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:maxLength="35"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/SignIn_ET_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SignIn_ET_email"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:passwordToggleEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/SignIn_ET_password"
            android:maxLength="15"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

<TextView
    android:id="@+id/SignIn_LBL_forgot_password"
    android:tag="SignIn_LBL_forgot_password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/SignIn_LBL_forgot_password"
    android:layout_below="@+id/SignIn_ET_password"
    android:layout_alignEnd="@+id/SignIn_ET_password"
    android:textColor="@color/Black"
    android:fontFamily="@font/cherry_cream_soda"
    android:clickable="true"
    android:focusable="true" />

    <TextView
        android:id="@+id/SignIn_LBL_errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_above="@id/SignIn_ET_email"
        android:layout_marginStart="25dp"
        android:textColor="@color/Red"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_margin="25dp"
        android:layout_alignParentBottom="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/SignIn_BTN_login"
            android:tag="SignIn_BTN_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SignIn_BTN_Login"
            android:textAllCaps="false"
            style="@style/TextAppearance.AppCompat.Large.Inverse"
            app:cornerRadius="10dp"
            />

        <TextView
            android:id="@+id/SignIn_LBL_firstTime_register"
            android:tag="SignIn_LBL_firstTime_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SignIn_LBL_first_time_register_now"
            android:textColor="@color/Black"
            android:layout_margin="15dp"
            android:fontFamily="@font/cherry_cream_soda"
            android:clickable="true"
            android:focusable="true"
            />

    </LinearLayout>

</RelativeLayout>